# template-fastapi-postgres

./: Dockerfile  LICENSE  README.md  local.env  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: postcreate.sh
src/: alembic.ini  app.py
src/alembic/: env.py
src/alembic/versions/: 2023_10_30_0047-fd8d1603d1f9_initial_migration.py  2023_10_30_0051-a63ae46158a7_initial_migration.py  2023_11_21_1525-071dd9231044_hash_password_to_password.py
src/config/: database_config.py
src/models/: user_model.py
src/routes/: users_route.py
src/schemas/: user_schema.py
src/services/: database_service.py
