[tool.poetry]
name = "template-fastapi-postgres"
version = "0.1.0"
description = ""
authors = ["Fernando Crozetta <Fernando.Crozetta@rabobank.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
black = "^23.10.1"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
SQLAlchemy = "^2.0.22"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
